<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- These are the basic app strings -->
    <string name="app_name">MODS</string>
    <string name="mods_logo">mods logo</string>
    <string name="action_settings">Settings</string>
    <string name="schedule">Events and Programs</string>
    <string name="gallery">Gallery</string>

    <!-- These are for the exhibits -->
    <string name="floor_map_btn">Floor Maps</string>
    <string name="floor1">1st Floor</string>
    <string name="floor2">2nd Floor</string>
    <string name="ecomap">EcoScapes</string>
    <string name="stormmap">Storm Center</string>
    <string name="aquarium_btn">Aquariums</string>
    <string name="live_btn">Horseshoe Crabs</string>
    <string name="bugs_btn">Insects</string>
    <string name="reptile_btn">Reptiles</string>
    <string name="plasma_btn">Plasma Ball</string>
    <string name="hurricane_btn">Hurricanes</string>
    <string name="news_btn">News Center</string>
    <string name="tornado_btn">Tornadoes</string>

    <!-- These are the names for activites & fragments -->
    <string name="title_activity_floor_map">Floor Maps</string>
    <string name="title_activity_first_floor">First Floor</string>
    <string name="title_activity_second_floor">Second Floor</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_ecoscape">Florida EcoScapes</string>
    <string name="title_activity_storm">Storm Center</string>

</resources>
